--- a/src/components/common/Header/Header.css
+++ b/src/components/common/Header/Header.css
@@ -1,11 +1,14 @@
 .headerNavBar{
+    position: fixed;
+    top: 0;
+    left: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: transparent;
     width: 100%;
     height: 4rem;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #EDF2F4;
 }
 
 .navBar{
@@ -13,6 +16,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    margin: 0 3rem;
 }
 
 .divContainerNavs{
@@ -27,6 +31,8 @@
     align-items: center;
 }
 
-.divContainerRedes svg{
-    margin-left: 1rem;
+.divContainerRedes a{
+    list-style: none;
+    color: black;
+    margin: 0 0 0 1rem;
 }
