--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,9 @@
   font-family: "Lexend", sans-serif;
   margin: 0;
   padding: 0;
+  color: #EDF2F4;
+}
+
+body{
+  background: linear-gradient(to top, #0B090A, #161A1D, #161A1D);
 }
