Implementando la vista ProjectDetail

--- a/src/components/common/Header/Header.css
+++ b/src/components/common/Header/Header.css
@@ -24,12 +24,14 @@
     width: 50%;
     justify-content: space-evenly;
     align-items: center;
-}
-
-.divContainerNavs p{
-    cursor: pointer;
-    &:hover{
-        color: var(--rojo-claro);
-        transition: .2s ease-in-out;
+    a {
+        text-decoration: none;
+    }
+    p{
+        cursor: pointer;
+        &:hover{
+            color: var(--rojo-claro);
+            transition: .2s ease-in-out;
+        }
     }
 }
