--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -10,6 +10,7 @@
     display: flex;
     max-width: 1300px;
     width: 100%;
+    margin: 0 5rem;
 }
 
 .divInfoContainer{
@@ -37,4 +38,53 @@
 .principalImg{
     width: 470px;
     border-radius: 40%;
+}
+
+@media screen and (max-width:1150px) {
+    .principalTitle{
+        font-size: 2rem;
+    }
+    .secundaryTitle{
+        font-size: 1.5rem;
+    }
+    .mainP{
+        font-size: 1rem;
+    }
+    .principalImg{
+        width: 350px;
+    }
+}
+
+@media screen and (max-width: 782px) {
+    .mainPage{
+        flex-direction: column;
+        align-items: center;
+        margin-top: 5rem;
+    }
+    .divInfoContainer{
+        width: 100%;
+        margin-bottom: 2rem;
+        h2{
+            align-self: flex-start;
+        }
+        .buttonContainer{
+            align-self: center;
+        }
+    }
+    .principalImg{
+        width: 300px;
+    }
+    
+}
+
+@media screen and (max-width: 610px) {
+    .principalTitle{
+        font-size: 1.5rem;
+    }
+    .secundaryTitle{
+        font-size: 1.2rem;
+    }
+    .mainP{
+        font-size: .8rem;
+    }
 }
