--- a/src/components/Projects/ProjectComponent/ProjectComponent.css
+++ b/src/components/Projects/ProjectComponent/ProjectComponent.css
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: start;
     align-items: center;
+    min-height: 350px;
 }
 
 .divImgProjectContainer{
@@ -17,6 +18,10 @@
 .imgProject{
     width: 100%;
     border-radius: 10px;
+}
+
+.secondDescripiton{
+    display: none;
 }
 
 .dataProjectContainer{
@@ -51,4 +56,54 @@
     h1{
         color: var(--rojo-claro);
     }
+}
+
+@media screen and (max-width: 1150px) {
+    .divProjectsSection{
+        h1{
+            text-align: center;
+        }
+    }
+    .divWithPadding{
+        flex-direction: column-reverse;
+        height: auto;
+        margin: 3rem 0;
+    }
+    .divImgProjectContainer{
+        width: 100%;
+        margin: 1rem 0 0 0;
+    }
+    .dataProjectContainer{
+        width: 100%;
+        margin: 0 0 1rem 0;
+        h2{
+            margin-bottom: 1rem;
+        }
+        .descriptionProject{
+            display: none;
+        }
+        .secondDescripiton{
+            display: block;
+            margin-bottom: 1rem;
+        }
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .divWithPadding{
+        min-height: 100px;
+    }
+    .divProjectsSection{
+        h1{
+            font-size: 1.8rem;
+        }
+    }
+    .dataProjectContainer{
+        h2{
+            font-size: 1.5rem;
+        }
+        p{
+            font-size: 1rem;
+        }
+    }   
 }
