--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,12 +1,11 @@
 .projectsContainer{
     width: 100%;
-    height: 100vh;
     display: flex;
     justify-content: center;
 }
 
 .divProjectsSection{
-    margin: 3rem 0;
+    margin: 3rem 5rem;
     max-width: 1300px;
     width: 100%;
     display: flex;
@@ -23,4 +22,10 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+}
+
+@media screen and (max-width: 600px) {
+    .divProjectsSection{
+        margin: 3rem 2rem;
+    }
 }
