--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -94,6 +94,7 @@
 
 @media screen and (max-width: 800px) {
     .divAboutMeSection{
+        margin: 3rem 2rem;
         h1{
             font-size: 1.8rem;
         }
