Corrijo errores ortográficos y quito la foto de la pagina principal.

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,4 +1,4 @@
-.mainPageContainer{
+.mainPageContainer {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -6,85 +6,95 @@
     height: 100vh;
 }
 
-.mainPage{
+.mainPage {
     display: flex;
     max-width: 1300px;
     width: 100%;
     margin: 0 5rem;
+    justify-content: center;
 }
 
-.divInfoContainer{
-    width: 60%;
+.divInfoContainer {
+    width: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: start;
+    align-items: center;
 }
 
-.principalTitle{
+.principalTitle {
     font-size: 3rem;
 }
 
-.secundaryTitle{
+.secundaryTitle {
     font-size: 2rem;
     color: var(--rojo-claro);
 }
 
-.mainP{
+.mainP {
     margin: .5rem 0 1rem;
     font-size: 1.5rem;
 }
 
-.principalImg{
+.principalImg {
     width: 470px;
     border-radius: 40%;
 }
 
 @media screen and (max-width:1150px) {
-    .principalTitle{
+    .principalTitle {
         font-size: 2rem;
     }
-    .secundaryTitle{
+
+    .secundaryTitle {
         font-size: 1.5rem;
     }
-    .mainP{
+
+    .mainP {
         font-size: 1rem;
     }
-    .principalImg{
+
+    .principalImg {
         width: 350px;
     }
 }
 
 @media screen and (max-width: 782px) {
-    .mainPage{
+    .mainPage {
         flex-direction: column;
         align-items: center;
         margin-top: 5rem;
     }
-    .divInfoContainer{
+
+    .divInfoContainer {
         width: 100%;
         margin-bottom: 2rem;
-        h2{
+
+        h2 {
             align-self: flex-start;
         }
-        .buttonContainer{
+
+        .buttonContainer {
             align-self: center;
         }
     }
-    .principalImg{
+
+    .principalImg {
         width: 300px;
     }
-    
+
 }
 
 @media screen and (max-width: 610px) {
-    .principalTitle{
+    .principalTitle {
         font-size: 1.5rem;
     }
-    .secundaryTitle{
+
+    .secundaryTitle {
         font-size: 1.2rem;
     }
-    .mainP{
+
+    .mainP {
         font-size: .8rem;
     }
 }
